--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,718 @@
-.App {
+body,
+html {
+  margin: 0;
+  font-family: myFirstFont;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+header {
+  text-align: center;
+  margin: 2% auto;
+  display: flex;
+  justify-content: center;
+}
+
+nav {
+  width: 60%
+}
+
+.menu {
+  list-style-type: none;
+}
+
+.menu li {
+  display: inline-block;
+  margin-right: 3%;
+}
+
+.menu li a {
+  text-decoration: none;
+  color: black;
+}
+
+.arrow::after {
+  content: "\f107";
+  font-family: "Font Awesome 6 Free";
+  padding: 0 0 0 5px;
+}
+
+
+.log_button {
+  width: 20%;
+  margin-top: 1%;
+}
+
+.text {
+  text-decoration: none;
+  color: #005AE2;
+}
+
+.btn1 {
+  text-decoration: none;
+  color: white;
+  display: inline;
+  background-color: #005AE2;
+  padding: 3% 6%;
+  border-radius: 50px;
+  margin-left: 5%;
+}
+
+.headertext {
+  margin: 0 auto;
+  text-align: center;
+  width: 50%;
+  font-size: 130%;
+
+}
+
+.headertext h1 {
+  line-height: 2;
+  font-weight: 900;
+  font-family: gilroybold;
+}
+
+#line {
+  width: 20%;
+  position: relative;
+  top: -40px;
+  left: 8%;
+}
+
+.headertext p {
+  font-size: 17px;
+  color: #141414;
+  margin-bottom: 6%;
+}
+
+.btn2 {
+  text-decoration: none;
+  color: white;
+  display: inline;
+  background-color: #005AE2;
+  padding: 1% 4%;
+  border-radius: 50px;
+  font-size: 15px;
+}
+
+.text2 {
+  text-decoration: none;
+  color: #005AE2;
+  font-size: 15px;
+  margin-left: 5%;
+}
+
+.container1 {
+  text-align: center;
+  padding-top: 5%;
+
+}
+
+.textholder {
+  border: 1px solid #005AE2;
+  background-color: #FEFEFE;
+  width: 30%;
+  border-radius: 7px;
+  margin: 0 auto;
+  position: relative;
+  top: -170px;
+  left: 0;
+  padding: 1% 4%;
+  text-align: left;
+  background-image: linear-gradient(to right, rgb(203, 225, 243), rgba(255, 255, 255, 1));
+
+}
+
+#vector2 {
+  width: 13%;
+  position: relative;
+  top: 0;
+  left: -165px;
+}
+
+#shapes {
+  width: 50%;
+}
+
+.imagesection {
+  margin-top: -100px;
+}
+
+.textholder p {
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+  font-size: 16px;
+  margin-bottom: 30px;
+}
+
+.outercontainer {
+  display: flex;
+  padding: 0 0 0 10%;
+  justify-content: space-between;
+
+}
+
+
+.besideonestop {
+  display: flex;
+}
+
+.newcontainer {
+  margin-top: -4px;
+  background-color: #F9FBFD;
+  padding: 2% 0;
+}
+
+.textcontainer {
+  width: 25%;
+}
+
+.textcontainer p {
+  font-size: 16px;
+}
+
+.container2 {
+  padding: 5% 0;
+}
+
+.outercontainer1 {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10%;
+}
+
+.why {
+  display: inline-block;
+  position: relative;
+  top: -10px;
+  left: 3px;
+}
+
+.innerflexbox {
+  display: flex;
+  width: 50%;
+  flex-wrap: wrap;
+}
+
+.innercontainer {
+  width: 50%;
+
+}
+
+.innercontainer p {
+  width: 72%;
+  line-height: 1.5;
+}
+
+.textbox {
+  width: 50%;
+  margin-bottom: 4%;
+}
+
+.textbox p {
+  width: 100%;
+}
+
+.container3 {
+  text-align: center;
+  margin: 0 auto;
+}
+
+.container3 p {
+  margin: -10px auto 0 auto;
+  width: 43%;
+  line-height: 1.5;
+}
+
+
+.bigcontainer {
+  margin-top: 10%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.column {
+  border: 1px solid #005AE2;
+  border-radius: 5px;
+  padding: 1% 2% 1% 3%;
+  display: inline-block;
+  text-align: left;
+  margin-right: -10px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.small {
+  font-size: 14px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+.column ul {
+  margin-left: -40px;
+
+}
+
+.column ul li {
+  list-style-type: none;
+  margin-bottom: 10px;
+}
+
+.column ul li::before {
+  content: "\f058";
+  font-family: "Font Awesome 6 Free";
+  padding: 0 10px 0 0;
+  color: #005AE2;
+}
+
+.column1 {
+  border: none;
+  border-radius: 5px;
+  padding: 2% 2% 1% 3%;
+  background-color: #1E3448;
+  color: white;
+  position: relative;
+  top: -50px;
+  display: inline-block;
+  height: 400px;
+  text-align: left;
+
+}
+
+.column1 ul {
+
+  margin-left: -40px;
+
+}
+
+.column1 ul li {
+  list-style-type: none;
+  margin-bottom: 10px;
+}
+
+.column1 ul li::before {
+  content: "\f058";
+  font-family: "Font Awesome 6 Free";
+  padding: 0 10px 0 0;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.column2 {
+  border: 1px solid #005AE2;
+  border-radius: 5px;
+  padding: 1% 2% 1% 3%;
+  display: inline-block;
+  text-align: left;
+  margin-left: -10px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.column2 ul {
+  margin-left: -40px;
+
+}
+
+.column2 ul li {
+  list-style-type: none;
+  margin-bottom: 10px;
+}
+
+.column2 ul li::before {
+  content: "\f058";
+  font-family: "Font Awesome 6 Free";
+  padding: 0 10px 0 0;
+  color: #005AE2;
+}
+
+.btncontainer {
+  margin: 0 auto 50px auto;
+  text-align: center;
+  width: 60%;
+}
+
+.btn3 {
+  text-decoration: none;
+  background-color: white;
+  display: inline;
+  color: #005AE2;
+  padding: 1% 2%;
+  border-radius: 50px;
+  font-size: 15px;
+  border: 1px solid #005AE2;
+  margin-right: 5px;
+}
+
+.btn4 {
+  text-decoration: none;
+  background-color: #005AE2;
+  display: inline;
+  color: white;
+  padding: 1.2% 4%;
+  border-radius: 50px;
+  font-size: 15px;
+}
+
+.formsection {
+  background: #1E3448;
+  padding: 5%;
+
+}
+
+form {
+  background-color: white;
+  width: 40%;
+  text-align: center;
+  margin: 0 auto;
+  padding: 2%;
+  border-radius: 7px;
+}
+
+.input1 {
+  border: 1px solid #005AE2;
+  width: 100%;
+  display: block;
+  border-radius: 7px;
+  padding: 3%;
+  color: #005AE2;
+  outline: none;
+  margin-bottom: 30px;
+}
+
+.input1::placeholder {
+  color: #005AE2;
+}
+
+.input1:hover {
+  border: 2px solid #005AE2;
+}
+
+.input2 {
+  border: 1px solid #005AE2;
+  width: 50%;
+  display: inline;
+  border-radius: 7px;
+  padding: 3%;
+  color: #005AE2;
+  outline: none;
+  margin-right: 5px;
+}
+
+.input2::placeholder {
+  color: #005AE2;
+}
+
+.input2:hover {
+  border: 2px solid #005AE2;
+}
+
+.input3 {
+  border: 1px solid #005AE2;
+  width: 50;
+  display: inline;
+  border-radius: 7px;
+  padding: 3%;
+  color: #005AE2;
+  outline: none;
+}
+
+.input3::placeholder {
+  color: #005AE2;
+}
+
+.input3:hover {
+  border: 2px solid #005AE2;
+}
+
+.submit {
+  background-color: #005AE2;
+  width: 100%;
+  display: inline;
+  border-radius: 100px;
+  padding: 3%;
+  color: white;
+  outline: none;
+  margin-top: 30px;
+  border: none;
+}
+
+.submit:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+.formsection p {
+  color: #005AE2;
+  text-align: left;
+  margin-top: -10px;
+}
+
+.formsection a {
+  text-decoration: none;
+  color: #005AE2;
+  font-weight: 600;
+}
+
+.faqscontainer {
+  width: 60%;
+  margin: 2% auto;
+  text-align: center;
+}
+
+.faqs {
+text-align: center;
+margin-top: 2%;
+}
+
+details {
+  color: black;
+  border-bottom: 1px solid #aaa;
+  text-align: left;
+
+}
+
+summary {
+  padding: .5em 1.3rem;
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  transition: height 1s ease;
+  font-size: 18px;
+}
+
+summary::-webkit-details-marker {
+  display: none;
+}
+
+summary:after {
+  content: "\002B";
+}
+
+details[open] summary {
+
+  margin-bottom: .5em;
+}
+
+details[open] summary:after {
+  content: "\2212";
+}
+
+details[open] div {
+  padding: .5em 1em;
+}
+
+.faqscontainer p {
+  color: grey;
+}
+
+.belowfaqs {
+  background: #1E3448;
+  padding: 5%;
+  color: white;
+  text-align: center;
+}
+
+.belowfaqs h1 {
+  margin-bottom: 4% ;
+
+}
+
+.footer {
+  height: 550px;
+  position: relative; 
+  /* background-image: url(/Assets/footerimage.jpeg); */
+  background-repeat: no-repeat;
+}
+
+
+.footer-text-cont {
+  display: flex;
+  gap: 39px;
+  justify-content: center;
+  margin-top: 95px;
+}
+
+.site-logo {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  width: 184px
+}
+
+.social-logo {
+  display: flex; 
+  gap: 24px; 
+  align-items: center;
+}
+
+.site-navigation {
+  display: flex;
+  gap: 24px;
+}
+
+.whyres, .proleg {
+  display: flex;
+  flex-direction: column;
+  gap: 56px;
+}
+
+.solfea {
+  display: flex;
+  flex-direction: column;
+  gap: 31px;
+}
+
+
+.why, .resources, .solution, .features, .product, .legal, .company {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 0 24px;
+}
+
+
+
+.why p, .resources p, .solution p, .features p, .product p, .legal p, .company p {
+  font-family: 'Gilroy-Medium', sans-serif;
+  font-size: 16px;    
+  line-height: 24px;
+}
+
+.why p {
+  width: 131px;
+}
+
+.resources p {
+  width: 132px;
+  
+}
+
+.solution p {
+  width: 129px;
+}
+
+.features p {
+  width: 153px
+}
+
+.product p {
+  width: 133px;
+}
+
+.legal p {
+  width: 163px
+}
+
+.company p {
+  width: 100px;
+}
+
+.under {
+  display: flex;
+  gap: 8px;
+  margin-top: 119px;
+  align-items: center;
+  margin-left: 1017px;
+}
+.under p {
+  font-family: 'Gilroy-Medium', sans-serif;
+  font-size: 14px;
+}
+
+.section-footer::before{
+  content: "";
+  display: block;
+  top: 309.27px;
+  left:897px;
+  /* background-image: url("../img/spectar.png"); */
+  background-repeat: no-repeat;
+  
+}
+.container0{
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  margin-top: 80px;
+  width: 550px;
+  background: #fff;
+  padding-bottom: 30px;
+}
+.header1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 9px;
+  width: 100%;
+  margin-top: 30px;
+}
+.text1{
+  color: #005AE2;
+  font-size: 28px;
+  font-weight: 700;
+}
+.underline{
+  width: 61px;
+  height: 6px;
+  background: #005AE2;
+  border-radius: 9px;
+}
+.inputs{
+  margin-top: 55px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.inputt{
+  display: flex;
+  align-items: center;
+  margin: auto;
+  background: #FEFEFE;
+}
+.inputt input{
+  height: 40px;
+  width: 400px;
+  background-color: transparent;
+  border-radius: 8px;
+  border-color: #1451ae;
+  font-size: 15px;
+  padding-left: 10px;
+}
+.forgot-password{
+  padding-left: 62px;
+  margin-top: 20px;
+  color: #797979;
+  font-size: 18px;
+}
+.forgot-password span{
+  color: #005AE2;
+  cursor: pointer;
+}
+.submit-container{
+  display: flex;
+  gap: 30px;
+  margin: 15px auto;
+}
+.submits{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 170px;
+  height: 50px;
+  color: white;
+  background: #005AE2;
+  border-radius: 40px;
+  font-size: 17px;
+  font-weight: 700;
+  cursor: pointer;
+}
+.gray{
+  background: #EAEAEA;
+  color: #797979;
+}
+
+.user-profile {
+  background-color: red;
+}
+
+.color-red {
+  color: red;
 }
